--- a/sources/fakturyA/fakturyA.csproj
+++ b/sources/fakturyA/fakturyA.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp">
+      <HintPath>C:\Users\Arek\Downloads\itextsharp-all-5.5.9\itextsharp-dll-core\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.pdfa">
+      <HintPath>C:\Users\Arek\Downloads\itextsharp-all-5.5.9\itextsharp-dll-pdfa\itextsharp.pdfa.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\MySql.Data.dll</HintPath>
@@ -49,11 +55,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormArticleAmount.cs">
+    <Compile Include="AddArticleToInvoice.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormArticleAmount.Designer.cs">
-      <DependentUpon>FormArticleAmount.cs</DependentUpon>
+    <Compile Include="AddArticleToInvoice.Designer.cs">
+      <DependentUpon>AddArticleToInvoice.cs</DependentUpon>
     </Compile>
     <Compile Include="FormArticlesEditor.cs">
       <SubType>Form</SubType>
@@ -61,6 +67,7 @@
     <Compile Include="FormArticlesEditor.Designer.cs">
       <DependentUpon>FormArticlesEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArticleOnInvoice.cs" />
     <Compile Include="FormInvoiceEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,10 +103,11 @@
     <Compile Include="Invoice.cs" />
     <Compile Include="Mail.cs" />
     <Compile Include="MainProgram.cs" />
+    <Compile Include="PDFgenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormArticleAmount.resx">
-      <DependentUpon>FormArticleAmount.cs</DependentUpon>
+    <EmbeddedResource Include="AddArticleToInvoice.resx">
+      <DependentUpon>AddArticleToInvoice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormArticlesEditor.resx">
       <DependentUpon>FormArticlesEditor.cs</DependentUpon>
@@ -137,6 +145,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
