Okienko z danymi firmy, nie działająca edycja rabatu i ilości dodanego artykułu do faktury.

--- a/sources/fakturyA/fakturyA.csproj
+++ b/sources/fakturyA/fakturyA.csproj
@@ -211,6 +211,9 @@
     <EmbeddedResource Include="FormNewCustomers.resx">
       <DependentUpon>FormNewCustomers.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormOurCompanyDataEditor.resx">
+      <DependentUpon>FormOurCompanyDataEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormPermissionEditor.resx">
       <DependentUpon>FormPermissionEditor.cs</DependentUpon>
     </EmbeddedResource>
