AddWorker : Zmiana wyglądu + zabezpieczenia. Podpięcie okna do programu Customer : Poprawki okna

--- a/sources/fakturyA/fakturyA.csproj
+++ b/sources/fakturyA/fakturyA.csproj
@@ -184,6 +184,9 @@
       <DependentUpon>UserControl_PermissionsEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Worker.cs" />
+    <EmbeddedResource Include="FormAddNewWorker.resx">
+      <DependentUpon>FormAddNewWorker.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormAritcleAmount.resx">
       <DependentUpon>FormAritcleAmount.cs</DependentUpon>
     </EmbeddedResource>
